--- a/src/main/resources/theme/games.fxml
+++ b/src/main/resources/theme/games.fxml
@@ -1,17 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.ToggleButton?>
-<?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="gamesRoot" maxHeight="1.7976931348623157E308"
       maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" spacing="10.0"
       xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.faforever.client.game.GamesController">
@@ -47,7 +35,7 @@
           <content>
             <VBox maxHeight="1.7976931348623157E308" maxWidth="300.0" minHeight="0.0" minWidth="0.0">
               <children>
-                <ImageView fx:id="mapImageView" fitWidth="256.0" onMouseClicked="#onMapLargePreview" pickOnBounds="true"
+                <ImageView fx:id="mapImageView" fitWidth="256.0" pickOnBounds="true"
                            preserveRatio="true" styleClass="map-preview">
                   <VBox.margin>
                     <Insets bottom="20.0"/>
