--- a/src/main/resources/theme/mod_upload.fxml
+++ b/src/main/resources/theme/mod_upload.fxml
@@ -13,6 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.control.CheckBox?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="modUploadRoot" styleClass="dialog-window"
       xmlns="http://javafx.com/javafx/8.0.40" fx:controller="com.faforever.client.mod.ModUploadController">
   <children>
@@ -59,6 +60,12 @@
             <Insets top="10.0"/>
           </VBox.margin>
         </GridPane>
+        <Label fx:id="rankedCheckBoxLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+               text="%mapVault.upload.rankedConfirm" wrapText="true">
+          <graphic>
+            <CheckBox fx:id="rankedCheckbox" mnemonicParsing="false" selected="true"/>
+          </graphic>
+        </Label>
         <ButtonBar prefHeight="40.0" prefWidth="200.0">
           <buttons>
             <Button defaultButton="true" mnemonicParsing="false" onAction="#onUploadClicked"
@@ -71,7 +78,7 @@
     <VBox fx:id="parseProgressPane" alignment="CENTER" maxHeight="1.7976931348623157E308"
           maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
       <children>
-        <Label contentDisplay="TOP" styleClass="h2" text="%modVault.upload.reading">
+        <Label contentDisplay="TOP" styleClass="h2" text="%mapVault.upload.reading">
           <graphic>
             <ProgressIndicator prefHeight="100.0" prefWidth="100.0"/>
           </graphic>
@@ -81,8 +88,10 @@
     <VBox fx:id="uploadProgressPane" alignment="CENTER" layoutX="20.0" layoutY="520.0"
           maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0" VBox.vgrow="ALWAYS">
       <children>
-        <Label contentDisplay="TOP" layoutX="108.0" layoutY="30.0" styleClass="h2" text="%modVault.upload.uploading"/>
+        <Label fx:id="uploadTaskTitleLabel" contentDisplay="TOP" layoutX="108.0" layoutY="30.0" styleClass="h2"
+               text="%mapVault.upload.uploading"/>
         <ProgressBar fx:id="uploadProgressBar" maxWidth="1.7976931348623157E308" progress="0.0"/>
+        <Label fx:id="uploadTaskMessageLabel" text="&lt;bytes&gt;"/>
         <Button mnemonicParsing="false" onAction="#onCancelUploadClicked" text="%cancel"/>
       </children>
     </VBox>
