--- a/src/main/resources/theme/mod_vault.fxml
+++ b/src/main/resources/theme/mod_vault.fxml
@@ -41,7 +41,11 @@
                               <Insets bottom="20.0" top="20.0"/>
                            </VBox.margin>
                         </HBox>
-                        <Button mnemonicParsing="false" onAction="#onUploadModButtonClicked" text="%modVault.upload" />
+                         <Button mnemonicParsing="false" onAction="#onUploadModButtonClicked" text="%modVault.upload">
+                             <graphic>
+                                 <Label styleClass="fontawesome" text=""/>
+                             </graphic>
+                         </Button>
                         <VBox fx:id="showroomGroup" spacing="5.0">
                            <children>
                               <Label styleClass="h2" text="%modVault.recommendedUidMods">
