--- a/src/main/resources/theme/map_upload.fxml
+++ b/src/main/resources/theme/map_upload.fxml
@@ -17,90 +17,97 @@
       styleClass="dialog-window" xmlns="http://javafx.com/javafx/8.0.60"
       fx:controller="com.faforever.client.map.MapUploadController">
   <children>
-    <VBox fx:id="mapInfoPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="500.0"
-          spacing="20.0" VBox.vgrow="ALWAYS">
+      <VBox fx:id="mapInfoPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="500.0"
+            spacing="20.0" VBox.vgrow="ALWAYS">
       <children>
-        <Label styleClass="h1" text="%mapVault.upload.title"/>
-        <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="hint"
-               text="%mapVault.upload.hint" wrapText="true">
+          <Label styleClass="h1" text="%mapVault.upload.title"/>
+          <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="hint"
+                 text="%mapVault.upload.hint" wrapText="true">
           <graphic>
-            <Label contentDisplay="RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-                   styleClass="fontawesome" text="" wrapText="true"/>
+              <Label contentDisplay="RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                     styleClass="fontawesome" text="" wrapText="true"/>
           </graphic>
             </Label>
-        <Label fx:id="mapNameLabel" alignment="CENTER" contentDisplay="TOP" maxWidth="1.7976931348623157E308"
-               styleClass="h1" text="&lt;Name&gt;" wrapText="true" VBox.vgrow="ALWAYS">
+          <Label fx:id="mapNameLabel" alignment="CENTER" contentDisplay="TOP" maxWidth="1.7976931348623157E308"
+                 styleClass="h1" text="&lt;Name&gt;" wrapText="true" VBox.vgrow="ALWAYS">
           <graphic>
-            <ImageView fx:id="thumbnailImageView" fitHeight="256.0" fitWidth="256.0" pickOnBounds="true"
-                       preserveRatio="true"/>
+              <ImageView fx:id="thumbnailImageView" fitHeight="256.0" fitWidth="256.0" pickOnBounds="true"
+                         preserveRatio="true"/>
           </graphic>
         </Label>
-        <Label fx:id="descriptionLabel" alignment="TOP_LEFT" maxHeight="1.7976931348623157E308"
-               maxWidth="1.7976931348623157E308" text="&lt;Description&gt;" wrapText="true" VBox.vgrow="ALWAYS"/>
+          <Label fx:id="descriptionLabel" alignment="TOP_LEFT" maxHeight="1.7976931348623157E308"
+                 maxWidth="1.7976931348623157E308" text="&lt;Description&gt;" wrapText="true" VBox.vgrow="ALWAYS"/>
         <GridPane hgap="10.0">
           <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
+              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+              <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
           </columnConstraints>
           <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
           </rowConstraints>
           <children>
-            <Label text="%mapVault.upload.mapVersion"/>
-            <Label fx:id="versionLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308"
-                   text="&lt;Version&gt;" GridPane.columnIndex="1"/>
-            <Label text="%mapVault.upload.mapSize" GridPane.rowIndex="1"/>
-            <Label fx:id="sizeLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="&lt;Size&gt;"
-                   GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-            <Label text="%mapVault.upload.players" GridPane.rowIndex="2"/>
-            <Label fx:id="playersLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308"
-                   text="&lt;Max Players&gt;" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+              <Label text="%mapVault.upload.mapVersion"/>
+              <Label fx:id="versionLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308"
+                     text="&lt;Version&gt;" GridPane.columnIndex="1"/>
+              <Label text="%mapVault.upload.mapSize" GridPane.rowIndex="1"/>
+              <Label fx:id="sizeLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="&lt;Size&gt;"
+                     GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+              <Label text="%mapVault.upload.players" GridPane.rowIndex="2"/>
+              <Label fx:id="playersLabel" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308"
+                     text="&lt;Max Players&gt;" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
           </children>
           <VBox.margin>
-            <Insets top="10.0"/>
+              <Insets top="10.0"/>
           </VBox.margin>
         </GridPane>
           <Label fx:id="rankedLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
                  text="%mapVault.upload.rankedConfirm" wrapText="true">
           <graphic>
-            <CheckBox fx:id="rankedCheckbox" mnemonicParsing="false" selected="true"/>
+              <CheckBox fx:id="rankedCheckbox" mnemonicParsing="false" selected="true"/>
           </graphic>
         </Label>
         <ButtonBar prefHeight="40.0" prefWidth="200.0">
           <buttons>
-            <Button defaultButton="true" mnemonicParsing="false" onAction="#onUploadClicked"
-                    text="%mapVault.upload.uploadNow"/>
-            <Button mnemonicParsing="false" onAction="#onCancelClicked" text="%cancel"/>
+              <Button defaultButton="true" mnemonicParsing="false" onAction="#onUploadClicked"
+                      text="%mapVault.upload.uploadNow"/>
+              <Button mnemonicParsing="false" onAction="#onCancelClicked" text="%cancel"/>
           </buttons>
         </ButtonBar>
       </children>
     </VBox>
-    <VBox fx:id="parseProgressPane" alignment="CENTER" maxHeight="1.7976931348623157E308"
-          maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+      <VBox fx:id="parseProgressPane" alignment="CENTER" maxHeight="1.7976931348623157E308"
+            maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
       <children>
         <Label contentDisplay="TOP" styleClass="h2" text="%mapVault.upload.reading">
           <graphic>
-            <ProgressIndicator prefHeight="100.0" prefWidth="100.0"/>
+              <ProgressIndicator prefHeight="100.0" prefWidth="100.0"/>
           </graphic>
         </Label>
       </children>
     </VBox>
-    <VBox fx:id="uploadProgressPane" alignment="CENTER" layoutX="20.0" layoutY="520.0"
-          maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0" VBox.vgrow="ALWAYS">
+      <VBox fx:id="uploadProgressPane" alignment="CENTER" layoutX="20.0" layoutY="520.0"
+            maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0" VBox.vgrow="ALWAYS">
       <children>
-        <Label fx:id="uploadTaskTitleLabel" contentDisplay="TOP" layoutX="108.0" layoutY="30.0" styleClass="h2"
-               text="%mapVault.upload.uploading"/>
-        <ProgressBar fx:id="uploadProgressBar" maxWidth="1.7976931348623157E308" progress="0.0"/>
-        <Label fx:id="uploadTaskMessageLabel" text="&lt;bytes&gt;"/>
-        <Button mnemonicParsing="false" onAction="#onCancelUploadClicked" text="%cancel"/>
+          <Label fx:id="uploadTaskTitleLabel" contentDisplay="TOP" layoutX="108.0" layoutY="30.0" styleClass="h2"
+                 text="%mapVault.upload.uploading"/>
+          <ProgressBar fx:id="uploadProgressBar" maxWidth="1.7976931348623157E308" progress="0.0"/>
+          <Label fx:id="uploadTaskMessageLabel" text="&lt;bytes&gt;"/>
+          <Button mnemonicParsing="false" onAction="#onCancelUploadClicked" text="%cancel"/>
       </children>
     </VBox>
-    <VBox fx:id="uploadCompletePane" alignment="CENTER" layoutX="20.0" layoutY="648.0"
-          maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0" VBox.vgrow="ALWAYS">
+      <VBox fx:id="uploadCompletePane" alignment="CENTER" layoutX="20.0" layoutY="648.0"
+            maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0" VBox.vgrow="ALWAYS">
       <children>
-        <Label contentDisplay="TOP" layoutX="108.0" layoutY="30.0" styleClass="h2" text="%mapVault.upload.complete"/>
+          <Label contentDisplay="TOP" styleClass="h2" text="%mapVault.upload.complete"/>
+          <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="hint"
+                 text="%mapVault.upload.complete.hint" wrapText="true">
+              <graphic>
+                  <Label contentDisplay="RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+                         styleClass="fontawesome" text="" wrapText="true"/>
+              </graphic>
+          </Label>
       </children>
     </VBox>
   </children>
