--- a/src/main/resources/theme/user_info_window.fxml
+++ b/src/main/resources/theme/user_info_window.fxml
@@ -118,26 +118,26 @@
                           <children>
                             <HBox alignment="TOP_RIGHT" spacing="10.0">
                               <children>
-                                <ToggleButton fx:id="ratingOver90DaysButton" mnemonicParsing="false"
-                                              onAction="#onRatingOver90DaysButtonClicked" selected="true"
-                                              text="%userInfo.ratingOverTime.last3Months">
+                                <ToggleButton fx:id="ladder1v1Button" mnemonicParsing="false"
+                                              onAction="#ladder1v1ButtonClicked" selected="true"
+                                              text="%userInfo.ratingHistory.1v1">
                                   <toggleGroup>
-                                    <ToggleGroup fx:id="timeRange"/>
+                                    <ToggleGroup fx:id="ratingType"/>
                                   </toggleGroup>
                                 </ToggleButton>
-                                <ToggleButton fx:id="ratingOver365DaysButton" mnemonicParsing="false"
-                                              onAction="#onRatingOver365DaysButtonClicked"
-                                              text="%userInfo.ratingOverTime.lastYear" toggleGroup="$timeRange"/>
+                                <ToggleButton fx:id="globalButton" mnemonicParsing="false"
+                                              onAction="#globalButtonClicked"
+                                              text="%userInfo.ratingHistory.global" toggleGroup="$ratingType"/>
                               </children>
                             </HBox>
-                            <LineChart fx:id="rating90DaysChart" createSymbols="false" legendVisible="false"
+                            <LineChart fx:id="ratingHistoryChart" createSymbols="false" legendVisible="false"
                                        prefHeight="300.0" VBox.vgrow="ALWAYS">
                               <xAxis>
-                                <NumberAxis fx:id="rating90DaysXAxis" autoRanging="true" forceZeroInRange="false"
+                                <NumberAxis fx:id="xAxis" forceZeroInRange="false"
                                             side="BOTTOM"/>
                               </xAxis>
                               <yAxis>
-                                <NumberAxis fx:id="rating90DaysYAxis" autoRanging="true" forceZeroInRange="false"
+                                <NumberAxis fx:id="yAxis" forceZeroInRange="false"
                                             side="LEFT"/>
                               </yAxis>
                             </LineChart>
